# PhotoRora

./: .gitignore  AUTHORS.md  CMakeLists.txt  LICENSE.BSD-3-Clause.md  README.md  README.ru.md  conanfile.py  ru.omgtu.PhotoRora.desktop  ru.omgtu.PhotoRora.pro  ru.template.PhotoRora.desktop  ru.template.PhotoRora.pro
conan-recipes/: README.ru.md  conanfile.py
conan-recipes/flatbuffers/: conanfile.py
conan-recipes/onnxruntime/: conandata.yml  conanfile.py
conan-recipes/onnxruntime/cmake/: onnxruntime_external_deps.cmake
conan-recipes/onnxruntime/test_package/: CMakeLists.txt  conanfile.py
conan-recipes/onnxruntime/test_v1_package/: CMakeLists.txt
onnx/lib/cmake/onnxruntime/: onnxruntimeTargets-release.cmake
onnx/lib/pkgconfig/: libonnxruntime.pc
qml/cover/: DefaultCoverPage.qml
qml/pages/: FilePickerPage.qml  GalleryPickerPage.qml  MainPage.qml  SystemFilePickerPage.qml
rpm/: ru.omgtu.photorora.spec  ru.template.PhotoRora.changes.in  ru.template.PhotoRora.changes.run.in  ru.template.PhotoRora.spec
src/: aiimageprovider.h  imagecontroller.cpp  imagecontroller.h  main.cpp  onnxworker.cpp  onnxworker.h
translations/: ru.omgtu.photorora-ru.ts  ru.omgtu.photorora.ts  ru.template.PhotoRora-ru.ts  ru.template.PhotoRora.ts
